# final-project

./: Dockerfile  README.md  build_container.sh  fix_imports.sh  image.txt  pyproject.toml  start_robot_stack.sh  structure.txt  test_nat.sh
configs/: config.yml
docker/: Dockerfile  init_volumes.sh  run_hybrid_container.sh  start_robot_stack_explore.sh  start_robot_stack_patrol.sh  start_robot_system.sh
gui_controller/backend/: main.py  ros2_bridge.py
gui_controller/frontend/: package-lock.json  package.json
gui_controller/frontend/src/: App.jsx  index.css
gui_controller/frontend/src/components/: ClarificationModal.jsx
gui_controller/frontend/src/hooks/: useMissionClarification.js
maps/: my_map.pgm  my_map.yaml
src/multi_function_agent/: multi_function_agent_function.py  register.py  register.py.backup
src/multi_function_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/multi_function_agent/_robot_vision_controller/: main.py  test_integration.py
src/multi_function_agent/_robot_vision_controller/core/: composite_mission_parser.py  goal_parser.py  interactive_clarifier.py  mission_controller.py  models.py  query_extractor.py  ros2_node.py
src/multi_function_agent/_robot_vision_controller/navigation/: ai_recovery_agent.py  nav2_interface.py  navigation_reasoner.py  robot_controller_interface.py  stuck_detector.py
src/multi_function_agent/configs/: config.yml  learned_parameters.json
src/multi_function_agent/robot_vision_controller/: README.md  main.py  test_integration.py
(+54 files in other folders)
