[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 64"]

[project]
name = "multi_function_agent"
dynamic = ["version"]
dependencies = [
  "nvidia-nat[langchain]",
  "httpx"
]
requires-python = ">=3.11,<3.13"
description = "Custom NeMo Agent Toolkit Workflow"
classifiers = ["Programming Language :: Python"]

[project.entry-points.'nat.components']
multi_function_agent = "multi_function_agent.register"